# nomad

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  Makefile  README.rst  nomad.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml  test.yml
docs/: Makefile  conf.py  index.rst  make.bat  quick-start.rst  test-basic.rst  test-urls.rst  urls.rst
nomad/: __init__.py  repo.py  utils.py
nomad/engine/: __init__.py  dbapi.py  sqla.py
tests/: basic.t  catch-error.t  nomad.ini  urls.t
